navabr-responsive-z-index-fixed-and-deliv-added

--- a/css/header.css
+++ b/css/header.css
@@ -51,6 +51,7 @@ nav {
 /* Hamburger */
 #navbar-responsive {
   position: fixed;
+  z-index: 100;
   top: 0;
   bottom: 0;
   right: -100%;
